<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:background="#77777777">

<include layout="@layout/top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
            android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/kcb"
                    android:text="@string/education_info"
                    android:id="@+id/btn_lessons"
                    android:background="@drawable/navigation_bg"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/jdb"
                    android:text="@string/addition_info"
                    android:id="@+id/btn_progress"
                    android:background="@drawable/navigation_bg"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/jxtz"
                    android:text="@string/local_addition_info"
                    android:id="@+id/btn_eduction_notification"
                    android:background="@drawable/navigation_bg"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0dp"
                     android:layout_weight="7"
                     android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
